client/src/App.css
/* ... */
.fresh-menu-title {
  text-align: center;
  font-weight: bold;
  font-size: 37px;
  color: var(--green);
  letter-spacing: 0.25em;
}
.fresh-menu-subtitle-container {
  margin: 30px 0 40px 0;
}
.fresh-menu-subtitle {
  font-size: 20px;
  margin: 5px;
  padding: 0;
}
.menu-next-week-button-container {
  background-size: 100% 100%;
  margin-top: 50px;
}

.menu-carousel-img {
  width: 270px;
  height: 270px;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
.menu-carousel-img-container {
  position: relative;
  margin: 0;
  padding: 0;
  width: 270px;
  display: block;
  cursor: pointer;
  overflow: hidden;
}
.content {
  opacity: 0;
  font-size: 25px;
  position: absolute;
  top: 0;
  left: 0;
  color: #fff;
  background-color: rgba(145, 122, 122, 0.5);
  width: 270px;
  height: 270px;
  -webkit-transition: all 400ms ease-out;
  -moz-transition: all 400ms ease-out;
  -o-transition: all 400ms ease-out;
  -ms-transition: all 400ms ease-out;
  transition: all 400ms ease-out;
  text-align: center;
}
.menu-carousel-img-container .content:hover {
  opacity: 1;
}
.menu-carousel-img-container .content .text {
  height: 0;
  opacity: 1;
  transition-delay: 0s;
  transition-duration: 0.05s;
  padding-top: 80px;
  margin: 0 10px;
  text-transform: uppercase;
  font-weight: bold;
  line-height: 1.6;
}
.menu-carousel-img-container .content:hover .text {
  opacity: 1;
}
.menu-carousel-img:hover {
  opacity: 0.8;
}
.slider-arrow {
  position: absolute;
  height: 100%;
  width: 100%;
}
.slider-arrow:hover {
  cursor: pointer;
}
.arrow-btn {
  margin-top: 125px;
  z-index: 1;
}
.arrow-btn img {
  fill: var(--green);
}
.prev {
  float: left;
  margin-left: -50px;
}
.next {
  float: right;
  margin-right: -20px;
}

.arrow-btn2 {
  margin-top: 160px;
}

.try-us-today-button-container {
  text-align: left;
  margin: 50px 0 0 0;
}

.community-title {
  letter-spacing: 0.05em;
}

.quote-carousel-padding {
  padding: 0 200px;
}
.quote-carousel-padding2 {
  padding: 0 140px;
}
.quote2 {
  line-height: 50px;
  margin-bottom: 0;
  padding-bottom: 0;
}
.quote-line-height {
  line-height: 50px;
}
.quote-size {
  font-size: 24px;
}

.awards {
  padding-bottom: 100px;
}
.award-text * {
  margin: 0;
  padding: 0;
  font-size: 12px !important;
  letter-spacing: 0.05em;
}

@media only screen and (max-width: 767px) {
  .navigation-start {
    padding-left: 50px;
  }
  .navbar-brand {
    margin-left: 10px;
  }
  #logoutButton {
    margin: 30px 180px 30px 0;
  }

  .content-section .landing {
    max-width: 320px !important;
  }
  #footer-margin-mobile {
    margin-left: 10px;
  }

  .title-image-container {
    height: 500px;
    width: auto;
    margin: 0 0 0 0!important;
    padding: 0 0 0 0!important;
    object-fit: cover;
  }
  .title-image-container img {
    height: 500px;
    width: auto;
    object-fit: cover;
  }
  .top-left h1 {
    font-size:45px;
    font-weight: bold;
    line-height: 50px;
    padding: 0 0 0 0px;
    letter-spacing: .01em;
  }
  .top-left {
    margin-top: -55px;
  }
  .bottom-left {
    padding: 0 0 0 2px;
    /* margin-top: 100px; */
  }
  .plant-based-text {
    margin-bottom: 30px !important;
  }
  .plant-based-text h1 {
    font-size: 20px !important;
    font-weight: bold;
    letter-spacing: .05em;
    line-height: 10px;
  }
  .home_subtitle {
    margin-bottom: 60px !important;
  }
  .bottom-left {
    margin-bottom: -10px;
  }
  .zero-waste-cell {
    margin-top: 0!important;
    margin-bottom: 0!important;
  }
  .zero-waste {
    width: auto;
    letter-spacing: 0.1em;
    font-size: 26px;
  }
  .zero-waste-subtext {
    margin-left: 0px;
  }
  .box-shadow-top, .box-shadow-bottom {
    width: auto !important;
  }

  #left-padding-reusable {
    margin-left: 8px;
  }
  #left-padding-organic {
    margin-left: 8px;
  }
  .img-2-carrot {
    max-width: 300px !important;
    margin: 0!important;
  }

  .container_space {
    margin-top: 40px!important;
  }

  /* delivered weekly */
  .background {
    width: auto !important;
    object-fit: cover;
  }
  .delivered-title {
    letter-spacing: .15em!important;
    font-size: 28px!important;
    line-height:16px!important;
  }
  .delivered-title2 {
    font-size: 22px!important;
  }
  .delivered-padding {
    padding: 25px 0;
  }
  .delivered-titles-container {
    padding-top: 15px!important;
    padding-bottom: 0px!important;
  }
  .delivered-weekly-container {
    width: auto !important;
    height: auto!important;
    padding-bottom: 20px;
  }
  .delivered-weekly-container2 {
    padding-bottom: 0!important;
    margin-bottom: 0!important;
    padding-left: 10px!important;
    padding-right: 10px!important;
  }
  .delivered-weekly-bullets-container {
    padding-left: 0px !important;
  }
  .delivered-bullets-text {
    margin: 5px!important;
    font-size: 14px!important;
  }
  hr.three {
    width: auto!important;
    margin: 10px auto;
    border: none;
  }
  .pause-anytime {
    padding: 0!important;
  }

  .try-us-today-button-container {
    text-align: center;
    margin: 50px 0 0 0;
  }

  .visibility-hidden-mobile {
    visibility: hidden!important;
    display: none;
  }

  .mobile-center {
    padding-left: 60px;
    text-align: center;
  }
}

.top-right {
  position: absolute;
  top: 8px;
  right: 16px;
}

.top-center {
  position: absolute;
  top: 5%;
  left: 30%;
}

.mealoption-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 100px;
  text-shadow: 2px 2px 4px #ffefb0;
  line-height: 35px;
  color: white;
}

.meal-plan-container {
  position: relative;
  text-align: center;
}

.selectmeal-center {
  font-size: 30px;
  text-shadow: 2px 2px 4px #ffefb0;
  line-height: 30px;
  color: white;
  vertical-align: middle;
}

.bottom-right {
  position: absolute;
  bottom: 8px;
  right: 16px;
}

.bottom-right-meal-selection {
  position: absolute;
  bottom: 30px;
  right: 0.1px;
  left: 0.1px;
  float: right;
}
/* ... */

